fix weird inner scrollbar issue

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,9 +17,6 @@ dl, dd, ol, ul, figure {
 
 html, body {
   height: 100%;
-  overflow-x: hidden;
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
 }
 
 // Base
